--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token":"NjU3NzY0MDg2NzQxODYwMzgy.Xf19nQ.6HqR24ZZBsIeS0-40Is77PMhHBA",
+    "token":"your token",
     "prefix":"-",
-    "IdOwner":"pemaga12"           
+    "IdOwner":"your user name"           
 }
